# xplyda

./: .gitignore  README.md  docker-compose.yml
client/: Cargo.toml  README.md  build.rs
client/src/: main.rs
embeddings_service/: pyproject.toml  server.py
embeddings_service/proto/: __init__.py
proto/: embedding.proto
